--- a/src/main/resources/templates/user_login.html
+++ b/src/main/resources/templates/user_login.html
@@ -22,10 +22,10 @@
     </label>
     <label class="error" th:errors="*{password}">Password error placeholder</label>
     <br/><br/>
-<!--    <div class="button-container">-->
-<!--        <input type="submit" value="Login" class="btn btn-primary">-->
+    <div class="button-container">
+        <input type="submit" value="Login" class="btn btn-primary">
 <!--        <a href="/users/new" class="btn btn-secondary">Register</a>-->
-<!--    </div>-->
+    </div>
 </form>
 
 </body>
