--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,62 +40,7 @@
     </div>
 
 
-    <header class="site-navbar js-sticky-header site-navbar-target" role="banner">
-        <div class="container">
-            <div class="row align-items-center">
-
-                <div class="col-6 col-xl-2">
-                    <h1 class="mb-0 site-logo"><a href="index.html" class="h2 mb-0">Finances<span
-                            class="text-primary">.</span> </a></h1>
-                </div>
-
-                <div class="col-12 col-md-10 d-none d-xl-block">
-                    <nav class="site-navigation position-relative text-right" role="navigation">
-
-                        <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                            <li><a href="#home-section" class="nav-link">Home</a></li>
-                            <li class="has-children">
-                                <a href="#about-section" class="nav-link">About Us</a>
-                                <ul class="dropdown">
-                                    <li><a href="#team-section" class="nav-link">Team</a></li>
-                                    <li><a href="#pricing-section" class="nav-link">Pricing</a></li>
-                                    <li><a href="#faq-section" class="nav-link">FAQ</a></li>
-                                    <li><a href="#gallery-section" class="nav-link">Gallery</a></li>
-                                    <li><a href="#services-section" class="nav-link">Services</a></li>
-                                    <li><a href="#testimonials-section" class="nav-link">Testimonials</a></li>
-                                    <li class="has-children">
-                                        <a href="#">More Links</a>
-                                        <ul class="dropdown">
-                                            <li><a href="#">Menu One</a></li>
-                                            <li><a href="#">Menu Two</a></li>
-                                            <li><a href="#">Menu Three</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-
-
-                            <li><a href="#blog-section" class="nav-link">Blog</a></li>
-                            <li><a href="#contact-section" class="nav-link">Contact</a></li>
-                            <li class="social"><a href="#contact-section" class="nav-link"><span
-                                    class="icon-facebook"></span></a></li>
-                            <li class="social"><a href="#contact-section" class="nav-link"><span
-                                    class="icon-twitter"></span></a></li>
-                            <li class="social"><a href="#contact-section" class="nav-link"><span
-                                    class="icon-linkedin"></span></a></li>
-                        </ul>
-                    </nav>
-                </div>
-
-
-                <div class="col-6 d-inline-block d-xl-none ml-md-0 py-3" style="position: relative; top: 3px;"><a
-                        href="#" class="site-menu-toggle js-menu-toggle float-right"><span class="icon-menu h3"></span></a>
-                </div>
-
-            </div>
-        </div>
-
-    </header>
+    <div th:replace="fragments/header :: header"></div>
 
 
     <div class="site-blocks-cover overlay" th:style="'background-image: url(' + |@{/images/background.jpg}| + ');'"
@@ -973,67 +918,8 @@
         </div>
     </section>
 
-
-    <footer class="site-footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-9">
-                    <div class="row">
-                        <div class="col-md-5">
-                            <h2 class="footer-heading mb-4">About Us</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque facere laudantium magnam
-                                voluptatum autem. Amet aliquid nesciunt veritatis aliquam.</p>
-                        </div>
-                        <div class="col-md-3 ml-auto">
-                            <h2 class="footer-heading mb-4">Quick Links</h2>
-                            <ul class="list-unstyled">
-                                <li><a href="#about-section" class="smoothscroll">Terms</a></li>
-                                <li><a href="#about-section" class="smoothscroll">Policy</a></li>
-                                <li><a href="#about-section" class="smoothscroll">About Us</a></li>
-                                <li><a href="#services-section" class="smoothscroll">Services</a></li>
-                                <li><a href="#testimonials-section" class="smoothscroll">Testimonials</a></li>
-                                <li><a href="#contact-section" class="smoothscroll">Contact Us</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-md-3 footer-social">
-                            <h2 class="footer-heading mb-4">Follow Us</h2>
-                            <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
-                            <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
-                            <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-                            <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <h2 class="footer-heading mb-4">Subscribe Newsletter</h2>
-                    <form action="#" method="post" class="footer-subscribe">
-                        <div class="input-group mb-3">
-                            <input type="text" class="form-control border-secondary text-white bg-transparent"
-                                   placeholder="Enter Email" aria-label="Enter Email" aria-describedby="button-addon2">
-                            <div class="input-group-append">
-                                <button class="btn btn-primary text-black" type="button" id="button-addon2">Send
-                                </button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-            <div class="row pt-5 mt-5 text-center">
-                <div class="col-md-12">
-                    <div class="border-top pt-5">
-                        <p>This template is made
-                            with <i class="icon-heart-o" aria-hidden="true"></i> by <a href="https://gitlab.com/minus273dot15/virtual-wallet"
-                                                                                       target="_blank">Team 10 @ Telerik Alpha 48</a>
-
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </footer>
-
-</div> <!-- .site-wrap -->
-
+    <div th:replace="fragments/footer :: footer"></div>
+</div>
 <script th:src="@{/js/jquery-3.3.1.min.js}"></script>
 <script th:src="@{/js/jquery-ui.js}"></script>
 <script th:src="@{/js/popper.min.js}"></script>
