Added dummy single view page for reference on creating new pages

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -54,12 +54,9 @@
                 <div class="col-md-12">
                     <div class="border-top pt-5">
                         <p>This template is made
-                            with <i class="icon-heart-o" aria-hidden="true"></i> by <a href="https://gitlab.com/minus273dot15/virtual-wallet"
-                                                                                       target="_blank">Team 10 @ Telerik Alpha 48</a>
-
+                            with <i class="icon-heart-o" aria-hidden="true"></i> by <a href="https://gitlab.com/minus273dot15/virtual-wallet" target="_blank">Team 10 @ Telerik Alpha 48</a>
                     </div>
                 </div>
-
             </div>
         </div>
     </footer>
