--- a/src/main/resources/templates/dummy_single_page.html
+++ b/src/main/resources/templates/dummy_single_page.html
@@ -28,78 +28,60 @@
 
 <div th:replace="fragments/header :: header"></div>
 
-    <div class="site-blocks-cover overlay" th:style="'background-image: url(' + |@{/images/background.jpg}| + ');'"
-         data-aos="fade" id="home-section">
+<!--Insert code here-->
 
+<div class="site-blocks-cover overlay" th:style="'background-image: url(' + |@{/images/background.jpg}| + ');'"
+     data-aos="fade" id="home-section">
 
-        <div class="container">
-            <div class="row align-items-center justify-content-center">
-                <div class="col-md-10 mt-lg-5 text-center">
-                    <div class="single-text owl-carousel">
-                        <div class="slide">
-                            <h1 class="text-uppercase" data-aos="fade-up">Banking Solutions</h1>
-                            <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet
-                                consectetur adipisicing elit. Repudiandae minima delectus accusamus accusantium deleniti
-                                libero excepturi porro illo.</p>
-                            <div data-aos="fade-up" data-aos-delay="100">
-                                <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">Get In Touch</a>
-                            </div>
+<!--    Start inserting code here to keep background image-->
+    <div class="container">
+        <div class="row align-items-center justify-content-center">
+            <div class="col-md-10 mt-lg-5 text-center">
+                <div class="single-text owl-carousel">
+                    <div class="slide">
+                        <h1 class="text-uppercase" data-aos="fade-up">Banking Solutions</h1>
+                        <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet
+                            consectetur adipisicing elit. Repudiandae minima delectus accusamus accusantium deleniti
+                            libero excepturi porro illo.</p>
+                        <div data-aos="fade-up" data-aos-delay="100">
+                            <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">Get In Touch</a>
                         </div>
-
-                        <div class="slide">
-                            <h1 class="text-uppercase" data-aos="fade-up">Financing Solutions</h1>
-                            <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet
-                                consectetur adipisicing elit.
-                                Repudiandae minima delectus accusamus accusantium deleniti libero excepturi porro
-                                illo.</p>
-                            <div data-aos="fade-up" data-aos-delay="100">
-                                <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">Get In Touch</a>
-                            </div>
-                        </div>
-
-                        <div class="slide">
-                            <h1 class="text-uppercase" data-aos="fade-up">Savings Accounts</h1>
-                            <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet
-                                consectetur adipisicing elit.
-                                Repudiandae minima delectus accusamus accusantium deleniti libero excepturi porro
-                                illo.</p>
-                            <div data-aos="fade-up" data-aos-delay="100">
-                                <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">Get In Touch</a>
-                            </div>
-                        </div>
-
                     </div>
-                </div>
 
+                    <div class="slide">
+                        <h1 class="text-uppercase" data-aos="fade-up">Financing Solutions</h1>
+                        <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet
+                            consectetur adipisicing elit.
+                            Repudiandae minima delectus accusamus accusantium deleniti libero excepturi porro
+                            illo.</p>
+                        <div data-aos="fade-up" data-aos-delay="100">
+                            <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">Get In Touch</a>
+                        </div>
+                    </div>
+
+                    <div class="slide">
+                        <h1 class="text-uppercase" data-aos="fade-up">Savings Accounts</h1>
+                        <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet
+                            consectetur adipisicing elit.
+                            Repudiandae minima delectus accusamus accusantium deleniti libero excepturi porro
+                            illo.</p>
+                        <div data-aos="fade-up" data-aos-delay="100">
+                            <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">Get In Touch</a>
+                        </div>
+                    </div>
+
+                </div>
             </div>
+
         </div>
     </div>
+</div>
+
+<!--End code insertion-->
 
 
+<div th:replace="fragments/footer :: footer"></div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <div th:replace="fragments/footer :: footer"></div>
 <script th:src="@{/js/jquery-3.3.1.min.js}"></script>
 <script th:src="@{/js/jquery-ui.js}"></script>
 <script th:src="@{/js/popper.min.js}"></script>
