--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -4,7 +4,7 @@ html {
 
 body {
   line-height: 1.7;
-  color: gray;
+  color: rgb(128, 128, 128);
   font-weight: 400;
   font-size: 1rem; }
 
@@ -105,7 +105,7 @@ body:after {
 
 .site-section-heading {
   padding-bottom: 20px;
-  margin-bottom: 0px;
+  margin-bottom: 0;
   position: relative;
   font-size: 2.5rem; }
   @media (min-width: 768px) {
@@ -150,7 +150,7 @@ body:after {
 .hover-bg-enlarge {
   overflow: hidden;
   position: relative; }
-  @media (max-width: 991.98px) {
+  @media (max-width: 992px) {
     .hover-bg-enlarge {
       height: auto !important; } }
   .hover-bg-enlarge > div {
@@ -164,7 +164,7 @@ body:after {
     -webkit-transform: scale(1.2);
     -ms-transform: scale(1.2);
     transform: scale(1.2); }
-  @media (max-width: 991.98px) {
+  @media (max-width: 992px) {
     .hover-bg-enlarge .bg-image-md-height {
       height: 300px !important; } }
 
@@ -189,7 +189,7 @@ body:after {
     position: relative;
     z-index: 1; }
 
-@media (max-width: 991.98px) {
+@media (max-width: 992px) {
   .img-md-fluid {
     max-width: 100%; } }
 
@@ -234,7 +234,7 @@ body:after {
       left: 0;
       font-size: 20px;
       top: -.3rem;
-      font-family: "icomoon";
+      font-family: "icomoon", serif;
       content: "\e5ca";
       position: absolute; }
   .ul-check.white li:before {
@@ -267,7 +267,7 @@ body:after {
 
 /* Navbar */
 .site-navbar {
-  margin-bottom: 0px;
+  margin-bottom: 0;
   z-index: 1999;
   position: absolute;
   top: 0;
@@ -312,7 +312,7 @@ body:after {
           -webkit-transform: translateY(-50%);
           -ms-transform: translateY(-50%);
           transform: translateY(-50%);
-          font-family: 'icomoon'; }
+          font-family: 'icomoon', serif; }
       .site-navbar .site-navigation .site-menu .has-children .dropdown {
         visibility: hidden;
         opacity: 0;
@@ -322,9 +322,9 @@ body:after {
         border-top: 2px solid #007bff;
         -webkit-box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
         box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
-        padding: 0px 0;
+        padding: 0 0;
         margin-top: 20px;
-        margin-left: 0px;
+        margin-left: 0;
         background: #fff;
         -webkit-transition: 0.2s 0s;
         -o-transition: 0.2s 0s;
@@ -379,7 +379,7 @@ body:after {
           -webkit-transition-delay: 0s;
           -o-transition-delay: 0s;
           transition-delay: 0s;
-          margin-top: 0px;
+          margin-top: 0;
           visibility: visible;
           opacity: 1; }
 
@@ -415,7 +415,7 @@ body:after {
         font-size: 30px;
         display: inline-block;
         padding-left: 10px;
-        padding-right: 0px;
+        padding-right: 0;
         line-height: 1;
         cursor: pointer;
         -webkit-transition: .3s all ease;
@@ -424,7 +424,7 @@ body:after {
     .site-mobile-menu .site-mobile-menu-header .site-mobile-menu-logo {
       float: left;
       margin-top: 10px;
-      margin-left: 0px; }
+      margin-left: 0; }
       .site-mobile-menu .site-mobile-menu-header .site-mobile-menu-logo a {
         display: inline-block;
         text-transform: uppercase; }
@@ -460,7 +460,7 @@ body:after {
       display: inline-block; }
     .site-mobile-menu .site-nav-wrap .arrow-collapse {
       position: absolute;
-      right: 0px;
+      right: 0;
       top: 10px;
       z-index: 20;
       width: 36px;
@@ -473,7 +473,7 @@ body:after {
       .site-mobile-menu .site-nav-wrap .arrow-collapse:before {
         font-size: 12px;
         z-index: 20;
-        font-family: "icomoon";
+        font-family: "icomoon", serif;
         content: "\f078";
         position: absolute;
         top: 50%;
@@ -562,7 +562,6 @@ body:after {
 .site-blocks-cover {
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: top;
   background-position: center center; }
   .site-blocks-cover.overlay {
     position: relative; }
@@ -586,7 +585,6 @@ body:after {
     height: calc(20vh); }
   .site-blocks-cover h1 {
     font-size: 4rem;
-    font-weight: 400;
     color: #fff;
     font-weight: 900; }
     @media (max-width: 991.98px) {
@@ -626,7 +624,7 @@ body:after {
     background: #f8f9fa; }
     @media (max-width: 991.98px) {
       .circle-bg:after {
-        bottom: 0px;
+        bottom: 0;
         right: -10px;
         display: none; } }
     @media (max-width: 767.98px) {
@@ -763,7 +761,6 @@ body:after {
   position: relative;
   z-index: 1; }
   .block-13 .owl-nav, .slide-one-item .owl-nav {
-    position: relative;
     position: absolute;
     bottom: -90px;
     left: 50%;
@@ -798,7 +795,7 @@ body:after {
   color: #fff;
   position: absolute !important;
   top: 50%;
-  padding: 0px;
+  padding: 0;
   height: 50px;
   width: 50px;
   border-radius: 50%;
@@ -1127,7 +1124,7 @@ body:after {
   margin-left: -100px; }
   @media (max-width: 991.98px) {
     .overlap-left {
-      margin-left: 0px; } }
+      margin-left: 0; } }
 
 .overlap-section {
   margin-top: -100px; }
@@ -1321,7 +1318,6 @@ body:after {
         display: block; } }
 
 .popular-category {
-  background: #fff;
   display: block;
   text-align: center;
   padding: 30px 10px;
@@ -1446,7 +1442,7 @@ body:after {
 .social-media {
   display: inline-block;
   float: left;
-  margin-bottom: 0px;
+  margin-bottom: 0;
   padding: 0; }
   .social-media li {
     display: inline-block; }
@@ -1548,7 +1544,7 @@ body:after {
       opacity: 0;
       visibility: hidden;
       bottom: -10px;
-      margin-bottom: 0px; }
+      margin-bottom: 0; }
     .media-1 .media-1-content .category {
       position: relative;
       -webkit-transition: .3s all ease-in-out;
@@ -1565,13 +1561,13 @@ body:after {
     opacity: 1;
     visibility: visible; }
   .media-1:hover h2 {
-    bottom: 0px;
+    bottom: 0;
     opacity: 1;
     visibility: visible; }
   .media-1:hover .category {
     opacity: 1;
     visibility: visible;
-    bottom: 0px;
+    bottom: 0;
     -webkit-transition-delay: 0.09s;
     -o-transition-delay: 0.09s;
     transition-delay: 0.09s; }
@@ -1608,8 +1604,8 @@ body:after {
   padding: 20px; }
   @media (max-width: 991.98px) {
     .experience {
-      bottom: 0px;
-      right: 0px; } }
+      bottom: 0;
+      right: 0; } }
   .experience span {
     display: block; }
   .experience .year {
@@ -1707,7 +1703,6 @@ body:after {
   position: absolute;
   margin: 0;
   top: 0;
-  padding: 0;
   bottom: 0;
   padding: 10px;
   -webkit-transform: translateX(-101%);
@@ -1742,7 +1737,6 @@ body:after {
   transform: translateX(0%); }
 
 .custom-direction {
-  position: relative;
   z-index: 99;
   border-radius: 7px;
   position: absolute;
@@ -1812,7 +1806,7 @@ body:after {
       opacity: 1;
       visibility: visible; }
     .item .item-wrap:hover span {
-      margin-top: 0px;
+      margin-top: 0;
       opacity: 1;
       visibility: visible;
       -webkit-transform: translate(-50%, -50%) scale(1);
@@ -2078,7 +2072,7 @@ figure figcaption {
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%); }
 
-/* New Stye */
+/* New Style */
 .single-text .owl-dots {
   margin-top: 2rem;
   text-align: center; }
