--- a/src/main/resources/templates/dummy_single_page.html
+++ b/src/main/resources/templates/dummy_single_page.html
@@ -33,10 +33,11 @@
 <div class="site-blocks-cover overlay" th:style="'background-image: url(' + |@{/images/background.jpg}| + ');'"
      data-aos="fade" id="home-section">
 
-<!--    Start inserting code here to keep background image-->
+    <!--    Start inserting code here to keep background image-->
     <div class="container">
         <div class="row align-items-center justify-content-center">
             <div class="col-md-10 mt-lg-5 text-center">
+                <!--    Start inserting code here to keep background image and centering -->
                 <div class="single-text owl-carousel">
                     <div class="slide">
                         <h1 class="text-uppercase" data-aos="fade-up">Banking Solutions</h1>
