Login page and header updated

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -305,7 +305,7 @@ body:after {
         padding-right: 20px; }
         .site-navbar .site-navigation .site-menu .has-children > a:before {
           position: absolute;
-          content: "\e313";
+          content: "\2193";
           font-size: 16px;
           top: 50%;
           right: 0;
@@ -366,7 +366,7 @@ body:after {
               background: #eff1f3;
               color: #000; }
           .site-navbar .site-navigation .site-menu .has-children .dropdown > li.has-children > a:before {
-            content: "\e315";
+            content: "\2193";
             right: 20px; }
           .site-navbar .site-navigation .site-menu .has-children .dropdown > li.has-children > .dropdown, .site-navbar .site-navigation .site-menu .has-children .dropdown > li.has-children > ul {
             left: 100%;
