--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -27,6 +27,25 @@
 
                             <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                                 <li><a href="#home-section" class="nav-link">Home</a></li>
+
+                                <li th:if="${session.currentUser == null}">
+                                    <a th:href="@{/auth/login}" class="nav-link" th:text="#{user.login}"/>
+                                </li>
+
+                                <li class="has-children" th:if="${session.currentUser != null}">
+                                    <a href="_blank" class="nav-link" th:text="${session.currentUser}"/>
+                                    <ul class="dropdown">
+                                        <li><a th:href="@{/user/profile}" class="nav-link"
+                                               th:text="#{user.edit_profile}"/></li>
+                                        <li><a th:href="@{/wallet}" class="nav-link"
+                                               th:text="#{user.my_wallet}"/></li>
+                                        <li><a th:href="@{/transactions}" class="nav-link"
+                                               th:text="#{user.my_transactions}"/></li>
+                                        <li><a th:href="@{/auth/logout}" class="nav-link" th:text="#{user.logout}"/>
+                                        </li>
+                                    </ul>
+                                </li>
+
                                 <li class="has-children">
                                     <a href="#about-section" class="nav-link">About Us</a>
                                     <ul class="dropdown">
@@ -47,26 +66,8 @@
                                     </ul>
                                 </li>
 
-
-                                <li th:if="${session.currentUser == null}">
-                                    <a th:href="@{/auth/login}" class="nav-link" th:text="#{user.login}"/>
-                                </li>
-
-                                <li class="has-children" th:if="${session.currentUser != null}">
-                                    <a href="_blank" class="nav-link" th:text="${session.currentUser}"/>
-                                    <ul class="dropdown">
-                                        <li><a th:href="@{/user/profile}" class="nav-link"
-                                               th:text="#{user.edit_profile}"/></li>
-                                        <li><a th:href="@{/auth/logout}" class="nav-link" th:text="#{user.logout}"/>
-                                        </li>
-                                    </ul>
-                                </li>
-
-
-                                <li th:if="${session.currentUser != null}">
-                                    <a th:href="@{/wallet}" class="nav-link" th:text="#{user.wallet}"/>
-                                </li>
                                 <li><a href="#contact-section" class="nav-link">Contact</a></li>
+
                                 <li class="social"><a href="#contact-section" class="nav-link"><span
                                         class="icon-facebook"></span></a></li>
                                 <li class="social"><a href="#contact-section" class="nav-link"><span
