--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>The Wallet Project</title>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/fonts/icomoon/style.css}"/>
@@ -13,7 +13,7 @@
     <link rel="stylesheet" th:href="@{/css/owl.theme.default.min.css}"/>
     <link rel="stylesheet" th:href="@{/css/jquery.fancybox.min.css}"/>
     <link rel="stylesheet" th:href="@{/css/bootstrap-datepicker.css}"/>
-    <link rel="stylesheet" th:href="@{/fonts/flaticon/font/flaticon.css}"/>
+    <link rel="stylesheet" th:href="@{/fonts/flaticon/flaticon.css}"/>
     <link rel="stylesheet" th:href="@{/css/aos.css}"/>
     <link rel="stylesheet" th:href="@{/css/style.css}"/>
 </head>
@@ -906,7 +906,6 @@
 </section>
 
 <div th:replace="fragments/footer :: footer"></div>
-</div>
 <script th:src="@{/js/jquery-3.3.1.min.js}"></script>
 <script th:src="@{/js/jquery-ui.js}"></script>
 <script th:src="@{/js/popper.min.js}"></script>
