--- a/src/main/resources/templates/user_edit.html
+++ b/src/main/resources/templates/user_edit.html
@@ -1,78 +1,116 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Dummy page for development purposes</title>
+    <title>The Wallet Project - Profile editing</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{/fonts/icomoon/style.css}"/>
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" th:href="@{/css/jquery-ui.css}"/>
+    <link rel="stylesheet" th:href="@{/css/owl.carousel.min.css}"/>
+    <link rel="stylesheet" th:href="@{/css/owl.theme.default.min.css}"/>
+    <link rel="stylesheet" th:href="@{/css/owl.theme.default.min.css}"/>
+    <link rel="stylesheet" th:href="@{/css/jquery.fancybox.min.css}"/>
+    <link rel="stylesheet" th:href="@{/css/bootstrap-datepicker.css}"/>
+    <link rel="stylesheet" th:href="@{/fonts/flaticon/flaticon.css}"/>
+    <link rel="stylesheet" th:href="@{/css/aos.css}"/>
+    <link rel="stylesheet" th:href="@{/css/style.css}"/>
+    <link rel="stylesheet" th:href="@{/css/user-details.css}"/>
 </head>
-<body>
-<h1>Dummy page for development purposes</h1>
-<!--Data test part-->
 
-<div th:if="${user.getUsername() != null}">
-    <p th:text="${user.getUsername()}"></p>
-</div>
-<!-- Display the avatar if available -->
-<div th:if="${user.getAvatar() != null}">
-    <p>Avatar Data:</p><p th:utext="|data:image/png;base64,${base64avatar}|"></p>
-    <img th:src="|data:image/png;base64,${base64avatar}|"
-         alt="Avatar Die MF Die">
+<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
+<div id="overlayer"></div>
+<div class="loader">
+    <div class="spinner-border text-primary" role="status">
+        <span class="sr-only">Loading...</span>
+    </div>
 </div>
 
+<div th:replace="fragments/header :: header"></div>
 
-        <h4>Edit profile details</h4>
-        <hr>
-        <h2 class="text-center">Edit Profile</h2>
-        <form action="/users/profile" th:object="${user}" method="post">
+<div class="site-blocks-cover overlay" th:style="'background-image: url(' + |@{/images/background.jpg}| + ');'"
+     data-aos="fade" id="home-section">
+
+    <div class="container">
+        <div class="row align-items-center justify-content-center">
+            <div class="col-md-10 mt-lg-5 text-center">
+                <h2 class="text-center">Edit Profile</h2>
+
+                <form action="/users/profile" th:object="${user}" method="post">
+                    <div class="user-profile">
+                        <div class="avatar-section-container">
+                            <div class="avatar-section">
+                                <div th:if="${base64avatar != null}">
+                                    <img th:src="|data:image/png;base64,${base64avatar}|" alt="User profile picture" class="avatar-image">
+                                </div>
+                                <div th:unless="${base64avatar != null}">
+                                    <img th:src="@{/images/default_profile_pic.png}" alt="Default profile picture" class="avatar-image">
+                                </div>
+                            </div>
+                            <input type="file" name="profilePicFile" accept="image/*">
+                            <a th:href="@{/users/delete-avatar}" class="btn btn-danger">Delete Profile Picture</a>
+                        </div>
 
 
-            <label th:text="#{user.profile_picture}">Avatar</label>
-            <br/>
-            <img th:src="@{'data:image/png;base64,' + ${#strings.escapeXml(base64avatar)}}" width="100" height="100" alt="Profile Picture">
-            <br/>
-            <input type="file" name="profilePicFile" accept="image/*">
-            <br/>
-            <a th:href="@{/users/delete-avatar}" class="btn btn-danger">Delete Profile Picture</a>
-            <br><br>
+                        <div class="user-info-section">
+                            <label th:text="#{user.username}">Username</label>
+                            <br/>
+                            <span th:text="${user.username}" class="username-field"></span>
+                            <br><br/>
 
-            <label th:text="#{user.username}">Username</label>
-            <br/>
-            <input type="text" th:field="*{username}">
-            <div th:if="${#fields.hasErrors('username')}" class="alert alert-danger" role="alert">
-                <p th:errors="*{username}"></p>
+                            <label th:text="#{user.email}">Email</label>
+                            <br/>
+                            <input type="text" th:field="*{email}">
+                            <div th:if="${#fields.hasErrors('email')}" class="alert alert-danger" role="alert">
+                                <p th:errors="*{email}"></p>
+                            </div>
+                            <br><br/>
+
+                            <label th:text="#{user.firstName}">First Name</label>
+                            <br/>
+                            <input type="text" th:field="*{firstName}">
+                            <br><br/>
+
+                            <label th:text="#{user.lastName}">Last Name</label>
+                            <br/>
+                            <input type="text" th:field="*{lastName}">
+                            <br><br/>
+
+                            <label th:text="#{user.password}">Password</label>
+                            <br/>
+                            <input type="password" th:field="*{password}">
+                            <br><br/>
+
+                            <div th:if="${errorMessage}" class="alert alert-danger" role="alert">
+                                <p th:text="${errorMessage}"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <input type="submit" value="Save" class="btn btn-primary">
+                    <a href="/users/delete" class="btn btn-danger">Delete Profile</a>
+                </form>
+
+
             </div>
-            <br><br/>
 
-            <label th:text="#{user.email}">Email</label>
-            <br/>
-            <input type="text" th:field="*{email}">
-            <div th:if="${#fields.hasErrors('email')}" class="alert alert-danger" role="alert">
-                <p th:errors="*{email}"></p>
-            </div>
-            <br><br/>
+        </div>
+    </div>
+</div>
 
-            <label th:text="#{user.firstName}">First Name</label>
-            <br/>
-            <input type="text" th:field="*{firstName}">
-            <br><br/>
+<div th:replace="fragments/footer :: footer"></div>
 
-            <label th:text="#{user.lastName}">Last Name</label>
-            <br/>
-            <input type="text" th:field="*{lastName}">
-            <br><br/>
-
-            <label th:text="#{user.password}">Password</label>
-            <br/>
-            <input type="password" th:field="*{password}">
-            <br><br/>
-
-            <div th:if="${errorMessage}" class="alert alert-danger" role="alert">
-                <p th:text="${errorMessage}"></p>
-            </div>
-
-            <input type="submit" value="Save" class="btn btn-primary">
-        </form>
-
-        <a href="/users/delete" class="btn btn-danger">Delete Profile</a>
-
+<script th:src="@{/js/jquery-3.3.1.min.js}"></script>
+<script th:src="@{/js/jquery-ui.js}"></script>
+<script th:src="@{/js/popper.min.js}"></script>
+<script th:src="@{/js/bootstrap.min.js}"></script>
+<script th:src="@{/js/owl.carousel.min.js}"></script>
+<script th:src="@{/js/jquery.countdown.min.js}"></script>
+<script th:src="@{/js/jquery.easing.1.3.js}"></script>
+<script th:src="@{/js/aos.js}"></script>
+<script th:src="@{/js/jquery.fancybox.min.js}"></script>
+<script th:src="@{/js/jquery.sticky.js}"></script>
+<script th:src="@{/js/isotope.pkgd.min.js}"></script>
+<script th:src="@{/js/main.js}"></script>
 </body>
 </html>
