--- a/src/main/resources/templates/user_edit.html
+++ b/src/main/resources/templates/user_edit.html
@@ -48,7 +48,7 @@
                                     <img th:src="@{/images/default_profile_pic.png}" alt="Default profile picture" class="avatar-image">
                                 </div>
                             </div>
-                            <input type="file" name="profilePicFile" accept="image/*">
+                            <input type="file" name="profilePictureFile" accept="image/*">
                             <a th:href="@{/users/delete-avatar}" class="btn btn-danger">Delete Profile Picture</a>
                         </div>
 
@@ -56,7 +56,7 @@
                         <div class="user-info-section">
                             <label th:text="#{user.username}">Username</label>
                             <br/>
-                            <span th:text="${user.username}" class="username-field"></span>
+                            <span th:text="${user.username}" class="username-field" th:field="*{username}"></span>
                             <br><br/>
 
                             <label th:text="#{user.email}">Email</label>
