--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -37,6 +37,10 @@
                                     <ul class="dropdown">
                                         <li><a th:href="@{/users/profile}" class="nav-link"
                                                th:text="#{user.edit_profile}"/></li>
+                                        <li th:if="${session.currentUserLevel == 1}">
+                                            <a th:href="@{/users/cpanel}" class="nav-link"
+                                               th:text="#{user.cpanel}"/></li>
+
                                         <li><a th:href="@{/wallet}" class="nav-link"
                                                th:text="#{user.my_wallet}"/></li>
                                         <li><a th:href="@{/transactions}" class="nav-link"
