--- a/src/main/resources/templates/user_edit.html
+++ b/src/main/resources/templates/user_edit.html
@@ -77,6 +77,11 @@
                             <input type="text" th:field="*{lastName}">
                             <br><br/>
 
+                            <label th:text="#{user.phone_edit}">Phone</label>
+                            <br/>
+                            <input type="text" th:field="*{phone}">
+                            <br><br/>
+
                             <label th:text="#{user.password}">Password</label>
                             <br/>
                             <input type="password" th:field="*{password}">
