--- a/src/main/resources/static/css/cpanel.css
+++ b/src/main/resources/static/css/cpanel.css
@@ -65,3 +65,26 @@ h2 {
     align-items: center;
     margin: 5px 0;
 }
+
+.user-item-search {
+    display: inline-block;
+    width: calc(33.33% - 20px);
+    margin: 10px;
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 5px;
+    vertical-align: top;
+}
+
+.user-details-search {
+    background-color: #444;
+    color: #fff;
+    border: 1px solid #333;
+    padding: 10px;
+    border-radius: 5px;
+    margin-top: 10px;
+    position: relative;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+}
