Pagination for search results

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -82,7 +82,7 @@
                                     <form th:action="@{/search/}" role="search" method="get">
                                         <div class="input-group add-on">
                                             <input class="form-control form-control222"
-                                                   th:placeholder="#{user.search_placeholder}" id="search" name="search"
+                                                   th:placeholder="#{user.search_placeholder}" id="username" name="username"
                                                    type="text">
                                             <div class="input-group-btn">
                                                 <button class="btn btn-default btn-default2913" type="submit">
