--- a/src/main/resources/templates/user_update_success.html
+++ b/src/main/resources/templates/user_update_success.html
@@ -33,8 +33,8 @@
     <div class="container">
         <div class="row align-items-center justify-content-center">
             <div class="col-md-10 mt-lg-5 text-center">
-                <h1 th:text="#{user.update_success_title}" /><br/>
-                <p th:text="#{user.update_success}" />
+                <h1 th:text="#{user.update_success_title}"></h1><br/>
+                <p th:text="#{user.update_success}"></p>
             </div>
 
         </div>
