Pokes fixup on frontend

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -45,21 +45,18 @@
                                                th:text="#{user.my_wallet}"/></li>
                                         <li><a th:href="@{/transactions}" class="nav-link"
                                                th:text="#{user.my_transactions}"/></li>
-                                        <li th:if="${session.currentUser != null}">
-                                            <a th:href="@{/users/pokes}" class="nav-link"
-                                               th:text="#{user.has_pokes}"/>
 
+
+                                        <li th:if="${session.currentUser != null and session.pokes != null}" class="has-children">
+                                            <a th:href="@{/users/pokes}" class="nav-link" th:text="#{user.has_pokes}" />
+
+                                            <ul class="dropdown">
+                                                <li th:each="poke : ${session.pokes}">
+                                                    <a href="#" th:text="${'Poke from ' + poke.getPokingUser().getUsername()}" />
+                                                </li>
+                                            </ul>
                                         </li>
 
-
-<!--                                        <li th:if="${session.currentUser != null}" class="has-children">-->
-<!--                                            <a th:href="@{/users/pokes}" class="nav-link" th:text="#{user.has_pokes}" />-->
-<!--                                            <ul th:if="${user.pokes != null}" class="dropdown">-->
-<!--                                                <li th:each="user.pokes : ${currentUserPokes}">-->
-<!--                                                    <a href="#" th:text="${'Poke from ' + poke.pokingUser.username}" />-->
-<!--                                                </li>-->
-<!--                                            </ul>-->
-<!--                                        </li>-->
 
 
 
